[gd_scene load_steps=16 format=2]

[ext_resource path="res://Recursos/Backgrounds/background_02.png" type="Texture" id=1]
[ext_resource path="res://Juego/HUD/Boton.tscn" type="PackedScene" id=2]
[ext_resource path="res://Juego/HUD/CuteGirl.tscn" type="PackedScene" id=3]
[ext_resource path="res://Recursos/Fonts/Kenney Blocks.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Recursos/Sounds FX/musica_a_day-to_remember_by_fiftysounds.ogg" type="AudioStream" id=5]
[ext_resource path="res://Juego/HUD/Ganaste.gd" type="Script" id=6]
[ext_resource path="res://Recursos/Fonts/Kenney Pixel.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://Juego/HUD/FlatBoy.tscn" type="PackedScene" id=8]
[ext_resource path="res://Recursos/Fonts/Kenney Future.ttf" type="DynamicFontData" id=23]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=2]
size = 120
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 23 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 1, 0.588235, 0.588235, 0.784314 )

[sub_resource type="DynamicFont" id=4]
size = 72
font_data = ExtResource( 4 )

[sub_resource type="Animation" id=5]
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ColorRect:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=6]
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ColorRect:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}

[node name="Ganaste" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fondo" type="TextureRect" parent="."]
anchor_left = 0.494
anchor_top = 0.711
anchor_right = 0.494
anchor_bottom = 0.711
margin_left = -639.82
margin_top = -690.92
margin_right = 1460.18
margin_bottom = 209.08
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Creditos" type="Label" parent="."]
margin_left = 992.0
margin_top = 680.0
margin_right = 1270.0
margin_bottom = 712.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "By Cristian Gomez (Chukin95)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HasGanado" type="Label" parent="."]
margin_left = 112.0
margin_top = -20.0
margin_right = 1152.0
margin_bottom = 130.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.0117647, 1, 0.0431373, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Â¡HAS GANADO!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FlatBoy" parent="." instance=ExtResource( 8 )]
position = Vector2( -32, 728 )

[node name="CuteGirl" parent="." instance=ExtResource( 3 )]
position = Vector2( -200, 728 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -10.0
autoplay = true

[node name="ColorRect" type="ColorRect" parent="."]
modulate = Color( 0, 0, 0, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 8.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -295.5
margin_top = -256.0
margin_right = 295.5
margin_bottom = 256.0
custom_styles/panel = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -240.5
margin_top = -272.0
margin_right = 240.5
margin_bottom = 240.0
custom_constants/separation = 6
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="MenuGanador" type="Label" parent="Panel/VBoxContainer"]
margin_right = 481.0
margin_bottom = 108.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 4 )
text = "PERDISTE"
align = 1
uppercase = true
__meta__ = {
"_editor_description_": ""
}

[node name="HSeparator" type="HSeparator" parent="Panel/VBoxContainer"]
margin_top = 114.0
margin_right = 481.0
margin_bottom = 118.0

[node name="VolverAJugar" parent="Panel/VBoxContainer" instance=ExtResource( 2 )]
margin_top = 124.0
margin_right = 481.0
margin_bottom = 216.0
text = "Nueva Partida"

[node name="MenuPrincipal" parent="Panel/VBoxContainer" instance=ExtResource( 2 )]
margin_top = 222.0
margin_right = 481.0
margin_bottom = 315.0
text = "Menu Principal"

[node name="Opciones" parent="Panel/VBoxContainer" instance=ExtResource( 2 )]
margin_top = 321.0
margin_right = 481.0
margin_bottom = 413.0
disabled = true
text = "Opciones"

[node name="Salir_Ganaste" parent="Panel/VBoxContainer" instance=ExtResource( 2 )]
margin_top = 419.0
margin_right = 481.0
margin_bottom = 512.0
text = "Salir"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Aclarar"
anims/Aclarar = SubResource( 5 )
anims/Oscurecer = SubResource( 6 )

[node name="TimerJugarDeNuevo" type="Timer" parent="."]
one_shot = true

[node name="TimerMenuPrincipal" type="Timer" parent="."]
one_shot = true

[node name="TimerSalir" type="Timer" parent="."]
one_shot = true

[connection signal="finished" from="AudioStreamPlayer" to="." method="_on_AudioStreamPlayer_finished"]
[connection signal="button_up" from="Panel/VBoxContainer/VolverAJugar" to="." method="_boton_VolverAJugar"]
[connection signal="button_up" from="Panel/VBoxContainer/MenuPrincipal" to="." method="_Boton_MenuPrincipal_Ganaste"]
[connection signal="button_up" from="Panel/VBoxContainer/Salir_Ganaste" to="." method="_Boton_Salir_Ganaste"]
[connection signal="timeout" from="TimerJugarDeNuevo" to="." method="_Timer_JugarDeNuevo"]
[connection signal="timeout" from="TimerMenuPrincipal" to="." method="_Timer_MenuPrincipal"]
[connection signal="timeout" from="TimerSalir" to="." method="_Timer_Salir"]
